about text overlap fix

--- a/src/components/About/index.module.css
+++ b/src/components/About/index.module.css
@@ -17,6 +17,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: -1;
     
     background-image: url(/static/map.svg);
     background-position: center top;
